logo. fix for menu collapse. scroll to info message when message sent

--- a/django/sections/static/sections/css/base.less
+++ b/django/sections/static/sections/css/base.less
@@ -82,6 +82,10 @@ a:hover {
     }
 }
 
+.navbar-brand {
+    width: 150px;
+    background: url(../img/logo.png) 0 0 no-repeat;
+}
 .navbar {
     background-color: transparent;
     border-color: transparent;
